[package]
name = "incus"
version = "0.1.9"
edition = "2021"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "structix <kontakt@structix.de>"]
description = "A Rust library for controlling Incus"
documentation = "https://docs.rs/incus"
repository = "https://github.com/STRUCTiX/incus-rs"
readme = "README.md"
license = "MIT"

[lib]
name = "incus"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempdir = "0.3"
